--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,10 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/breeze": "^1.25",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "pavel-mironchik/laravel-backup-panel": "^2.2"
+        "spatie/laravel-backup": "^8.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
